gas/ 	PR gas/13024 	* dwarf2dbg.c (pending_lines, pending_lines_tail): New variables. 	(dwarf2_gen_line_info_1): Delete. 	(dwarf2_push_line, dwarf2_flush_pending_lines): New functions. 	(dwarf2_gen_line_info, dwarf2_emit_label): Use them. 	(dwarf2_consume_line_info): Call dwarf2_flush_pending_lines. 	(dwarf2_directive_loc): Push previous .locs instead of generating 	them immediately.

gas/testsuite/
	* gas/mips/loc-swap-2.s, gas/mips/loc-swap-2.d,
	gas/mips/micromips@loc-swap-2.d,
	gas/mips/mips16@loc-swap-2.d: New test.
	* gas/mips/mips.exp: Run it.